--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1816,7 +1816,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #ffff5b;
+  background: #cf62dd;
 }
 .links-of-blogroll {
   font-size: 13px;
